# hmap

./: CMakeLists.txt  LICENSE  README.md  changelog.md
include/hmap/: hmap.h  smap.h
src/hmap/: djb2.c  djb2.h  hmap.c  smap.c
test-src/: test_hmap.cpp  test_smap.cpp
